--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-babel-plugin",
+  "name": "@wingsico/vite-babel-plugin",
   "version": "0.0.2",
   "description": "A plugin for vite using babel",
   "main": "lib/index.js",
@@ -30,5 +30,12 @@
   },
   "peerDependencies": {
     "vite": "^1.0.0-rc.9 || ^1.0.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/wingsico"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wingsico/vite-babel-plugin"
   }
 }
