--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-babel-plugin",
-  "version": "0.0.2-alpha",
+  "version": "0.0.2-alpha.0",
   "description": "A plugin for vite using babel",
   "main": "lib/index.js",
   "files": [
